# memorandum

./: README.md
grf/: grf.cc  grf.h
weblogin/: .gitignore  Cargo.toml
weblogin/bindings/: Cargo.toml  build.rs
weblogin/src/: main.rs
