[package]
name = "rologin"
version = "0.1.0"
authors = ["fecf <6128431+fecf@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "bindings" }
ureq = { version = "*", features = ["json", "charset", "cookies"] }
scraper = "0.12.0"
regex = "1.4.5"
log = "0.4.14"
env_logger = "0.8.3"
windows = "0.7.0"
encoding_rs = "0.8.28"
urlencoding = "1.1.1"
url = "2.2.1"
clap = "2.33.3"
